@@ -9,6 +9,8 @@ PHP                                                                        NEWS
 - Added --ri switch to CLI which allows to check extension information. (Marcus)
 - Added tidyNode::getParent() method (John, Nuno)
 - Fixed zend_llist_remove_tail (Michael Wallner, Dmitry)
+- Fixed bug #40576 (double values are truncated to 6 decimal digits when 
+  encoding). (Tony)
 - Fixed bug #40560 (DIR functions do not work on root UNC path). (Dmitry)
 - Fixed bug #40548 (SplFileInfo::getOwner/getGroup give a warning on broken
   symlink). (Marcus)
